修改为可能的问题和三元组